<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About">

    <ImageView

        android:id="@+id/profilePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textFullName"
        app:layout_constraintVertical_bias="0.03"

        android:src="@drawable/MiAvatar"

        />

    <TextView

        android:id="@+id/textFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/profilePicture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textDescription"
        app:layout_constraintVertical_bias="2"
        app:layout_constraintHorizontal_bias="0.07"

        android:text="@string/fullName"
        android:textSize="17dp"
        android:textStyle="italic"
        android:textColor="@color/black"


        />

    <TextView

        android:id="@+id/textDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textFullName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/email"

        android:text="@string/description"
        android:textSize="17dp"
        android:textStyle="italic"
        android:textColor="@color/black"

        />

    <TextView

        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cellPhoneNumber"
        app:layout_constraintHorizontal_bias="0.2"

        android:text="@string/email"
        android:textSize="17dp"
        android:textStyle="italic"
        android:textColor="@color/black"

        />

    <TextView

        android:id="@+id/cellPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf=""
        app:layout_constraintHorizontal_bias="0.05"

        android:text="@string/phoneNumber"
        android:textSize="17dp"
        android:textStyle="italic"
        android:textColor="@color/black"

        />

</android.support.constraint.ConstraintLayout>