<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/backgroundMain"
    >

    <TextView
        android:id="@+id/titleMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:background="@drawable/rounded_corner2"
        android:padding="10dp"
        android:text="@string/title_Main"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/contextMain"
        />

    <TextView
        android:id="@+id/contextMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/titleMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/context_Main"
        android:textSize="15dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:background="@drawable/rounded_corner2"
        android:padding="10dp"
        />

    <ImageButton
        android:id="@+id/iconHotels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:src="@drawable/hotel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iconRestaurants"
        app:layout_constraintTop_toBottomOf="@+id/contextMain"
        app:layout_constraintBottom_toTopOf="@+id/textHotels"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:id="@+id/textHotels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner2"
        android:padding="5dp"
        android:text="@string/iconhotel"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/iconHotels"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textRestaurants"
        android:layout_marginStart="20dp"
        />

    <ImageButton
        android:id="@+id/iconRestaurants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/contextMain"
        app:layout_constraintStart_toEndOf="@id/iconHotels"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textRestaurants"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:padding="10dp"
        android:src="@drawable/restaurant"
        />

    <TextView
        android:id="@+id/textRestaurants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner2"
        android:padding="5dp"
        android:text="@string/iconRestaurant"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textHotels"
        app:layout_constraintTop_toBottomOf="@id/iconRestaurants"
        android:layout_marginStart="62dp"
        />

</android.support.constraint.ConstraintLayout>