<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <ImageView
        android:id="@+id/imageRestaurant"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/nameRestaurant"
        android:src="@drawable/restaurant1"
        />

    <TextView
        android:id="@+id/nameRestaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/imageRestaurant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/restaurantType"
        android:text="@string/restaurantTitle1"
        android:textAlignment="center"
        android:textSize="22dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:elevation="20dp"
        android:background="@drawable/rounded_corner"
        android:padding="5dp"
        />

    <TextView
        android:id="@+id/restaurantSentence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/nameRestaurant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/restaurantType"
        android:text="@string/restaurantType1"
        android:textAlignment="center"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:elevation="20dp"
        android:background="@drawable/rounded_corner"
        android:padding="5dp"
        />

    <TextView
        android:id="@+id/restaurantType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/restaurantSentence"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/restaurantSentence1"
        android:textAlignment="center"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:elevation="20dp"
        android:background="@drawable/rounded_corner"
        android:padding="5dp"
        />


</android.support.constraint.ConstraintLayout>